# todo

./: .air.toml  .env-example  .gitignore  Makefile  go.mod  go.sum  pyproject.toml
app/core/: settings.py
app/database/: config.py
app/models/: base_model.py  comment_model.py  task_model.py  user_model.py
cmd/: main.go
config/: config.go
internal/app/: app.go
internal/database/: db.go
internal/database/migrations/: 20250126024836_create_users_table.sql  20250126042039_create_tasks_table.sql  20250126062539_create_comments_table.sql  20250127201309_create_roles_table.sql
internal/enums/: task_status_enum.go
internal/handlers/: comment_handler.go  enum_handler.go  role_handlers.go  task_handler.go  user_handler.go
internal/models/: comment_model.go  role_model.go  task_model.go  user_model.go  user_role_model.go
internal/repositories/: comment_repository.go  role_repository.go  task_repository.go  user_repository.go
internal/routes/: routes.go
internal/services/: comment_service.go  enum_serivce.go  role_service.go  task_service.go  user_service.go
internal/utils/: password_hashing.go
migrations/: env.py
migrations/versions/: 47521667e724_create_users_table.py
