[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["qsmsoft <qsmsoft@gmial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.7"}
alembic = "^1.14.1"
asyncpg = "^0.30.0"
uuid = "^1.30"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
